# lab2

./: Dockerfile  Exponential.cpp  Exponential.h  Makefile  Makefile.am  Makefile.in  Makefile.txt  config.status  configure  configure.ac  go.mod  http_serrver.py  http_server.py  main.cpp  main.go  myprogram  scriptA.sh  scriptB.sh  test.cpp  test_http_server.py  test_main.cpp
.github/workflows/: build.yml  c-cpp.yml  ci.yml  multiarch-docker.yml  tarball.yml
autom4te.cache/: output.1  output.2  requests  traces.2
debian/: changelog  control  files
debian/.debhelper/mypackage/: dbgsym-build-ids
debian/.debhelper/mypackage/dbgsym-root/DEBIAN/: control  md5sums
debian/mypackage/DEBIAN/: control  md5sums
